feat: update api to use simple relay with public calendars
